# Chennai_Lang-Custom_Programming_Language

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.bat  build_errors.txt  cf-config-utf8.json  cf-config.json  cf-update.json  chennai-lang-key.pem  chennai.bat  dns-record.json  payload.json  test_api.sh  test_compile.bat  user-data.sh
examples/: arrays.ch  functions.ch  hello.ch  operator.ch
src/: ast.h  codegen.cpp  codegen.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.h  token_reader.cpp  token_reader.h  value.h
src/java/com/chennai/lexer/: ChennaiLexer.java  Token.java  TokenType.java
web/: package-lock.json  package.json  server.js
web/public/: app.js  index.html  style.css
